FE: fix loading flicker

--- a/client/src/components/layouts/HeaderLayout/HeaderLayout.module.scss
+++ b/client/src/components/layouts/HeaderLayout/HeaderLayout.module.scss
@@ -7,7 +7,7 @@
   right: 0;
   left: 0;
   background-color: $white-color;
-  z-index: 15;
+  z-index: 30;
   transition: 0.3s ease;
 }
 
